# arr-scripts

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  go.mod  go.sum
.github/workflows/: ci.yml
cmd/sonarr-subtitle-merge/: main.go
scripts/: test-sonarr-subtitle-merge
sonarr-script/: Cargo.toml  Dockerfile
sonarr-script/examples/: 2srt2ass.rs  lingua.rs
sonarr-script/src/: cli.rs  main.rs  sub.rs  subtitle.rs
sonarr-script/src/cli/: clean.rs  convert.rs  merge.rs  sonarr_subtitle_merge.rs  subtitle_merge.rs
test/: bad_tags.srt  sonarr-script  test-sonarr-subtitle-merge
test/jjk_s02e01/: cleaned.en.ass  cleaned.zh-TW.ass  cleaned.zh.ass  extracted.en.ass  extracted.zh-TW.ass  extracted.zh.ass  input.mks
