[package]
name = "sonarr-script"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
aspasia = "0.2.0"
clap = { version = "4.5.7", features = ["derive", "env"] }
regex = "1.10.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
